Remove overflow to stop z-indexing issue

--- a/src/styles/components/_page.scss
+++ b/src/styles/components/_page.scss
@@ -1,11 +1,8 @@
 .page {
-  &.app {
-    display: flex;
-    height: 100vh;
+  display: flex;
 
-    @include breakpoint-md {
-      display: block;
-      height: auto;
-    }
+  @include breakpoint-md {
+    display: block;
+    height: auto;
   }
 }
