--- a/src/styles/pages/_500.scss
+++ b/src/styles/pages/_500.scss
@@ -1,6 +1,7 @@
 .page.internal-server-error {
   align-items: center;
   flex-direction: column;
+  height: 100vh;
   justify-content: flex-start;
   padding: 0;
   width: 100%;
